<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.mwolff</groupId>
	<artifactId>command</artifactId>
	<version>2.0.3</version>
	<packaging>jar</packaging>

	<name>Simple Command Framework</name>
	<description>A framework to build up SOLID-save applications.</description>
	<url>http://mwolff.info/wiki/display/SCF/The+Simple+Command+Framework</url>

	<licenses>
		<license>
			<name>GNU Lesser General Public License</name>
			<url>https://www.gnu.org/licenses/old-licenses/lgpl-2.1.en.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<organization>
		<name>Manfred.Wolff</name>
		<url>http://mwolff.org</url>
	</organization>

	<developers>
		<developer>
			<name>Manfred Wolff</name>
			<email>info@mwolff.org</email>
			<organization>Manfred.Wolff</organization>
			<organizationUrl>http://mwolff.org</organizationUrl>
		</developer>
		<developer>
			<name>Michael Albrecht</name>
			<email>m.albrecht@neusta.de</email>
			<organization>neusta software development GmbH</organization>
			<organizationUrl>http://www.neusta-se.de</organizationUrl>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/mannewolff/command.git</url>
		<developerConnection>wolff@manfred-wolff.de</developerConnection>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<junit.jupiter.version>5.13.4</junit.jupiter.version>
		<hamcrest.version>3.0</hamcrest.version>
		<mockito.version>5.12.0</mockito.version>
		<log4j.version>2.25.1</log4j.version>
		<jacoco.version>0.8.12</jacoco.version>
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
		<sonar.language>java</sonar.language>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest</artifactId>
			<version>${hamcrest.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>5.3.4</version>
			<scope>test</scope>
		</dependency>

		

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.pitest</groupId>
				<artifactId>pitest-maven</artifactId>
				<version>1.15.2</version>
				<dependencies>
					<dependency>
						<groupId>org.pitest</groupId>
						<artifactId>pitest-junit5-plugin</artifactId>
						<version>1.2.2</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<argLine>-Dnet.bytebuddy.experimental=true</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>

